<resources>
    <string name="app_name">Health Twin</string>
    <string name="greeting">Hello</string>
    <string name="BMI">BMI Classification:</string>
    <string name="activity">active</string>
    <string name="smoking">non smoker</string>
    <string name="drinking">heavy drinker</string>
    <string name="Activity_level">Activity Level</string>
    <string name="Smoking_Habits">Smoking Habits</string>
    <string name="Drinking_Habits">Drinking Habits</string>
    <string name="Life_Simulation">Life Expectancy Simulation</string>
    <string name="Years">You might get %2$s old</string>
    <string name="presetting">(Activity, Smoking and Drinking Levels are set according to your records)</string>
    <string name="Activity_Level_Slider">Activity Level</string>
    <string name="Smoking_Level_Slider">Smoking Level</string>
    <string name="Alcohol_Level_Slider">Drinking Level</string>
    <string name="Sleep_Level_Slider">Sleep Quality</string>
    <string name="Eating_Level_Slider">Healthy Eating</string>
    <string name="Mental_Level_Slider">Mental Health</string>
    <string name="Sleep_info">Consistency: Go to bed and wake up at the same time every day, even on weekends.\n\nEnvironment: Keep your bedroom cool (around 65°F/18°C), dark, and quiet.\n\nThe 30-Minute Rule: If you can\'t fall asleep after 20-30 minutes, get out of bed and do something boring in low light until you feel sleepy.\n\nDigital Detox: Turn off screens (phones, tablets, TVs) at least 30–60 minutes before bed to avoid \'blue light\' which suppresses sleep hormones.</string>
    <string name="Fitness_Info">Aerobic: Aim for at least 150 mins of moderate activity (brisk walking) or 75 mins of vigorous activity (running). \n\nStrength: Target all major muscle groups at least 2 days a week. \n\nRecovery: Treat rest days as appointments to allow your muscles to repair.</string>
    <string name="Nutrition_Info">Color your plate: Aim for at least three different colors of vegetables at dinner to ensure a variety of phytonutrients. \n\nFiber first: Choose whole grains (brown rice, oats) over white/refined grains to keep blood sugar stable. \n\nHydration: Often, thirst is mistaken for hunger. Drink a glass of water 20 minutes before a meal to see if you are actually hungry.</string>
    <string name="Mental_Info">The 5-4-3-2-1 Grounding Technique: To calm anxiety, identify 5 things you see, 4 you can touch, 3 you hear, 2 you can smell, and 1 you can taste. \n\n Digital Boundaries: Set a tech-free hour before bed to reduce comparison-itus and the impact of negative news cycles. \n\nSocial Connection: Even a 5-minute phone call with a friend can significantly lower cortisol levels.</string>
    <string name="Alcohol_Info">Alcohol consumption is found to play a causal role in more than 200 diseases, injuries and other health conditions.\n\n However, the global burden of disease and injuries caused by alcohol consumption can be quantified for only 31 health conditions on the basis of the available scientific evidence for the role of alcohol use in their development, occurrence and outcomes.</string>
    <string name="Smoking_Info">Smoking causes premature death and harms nearly every organ in the human body. \n\nInhaling tobacco smoke releases thousands of toxic chemicals that trigger widespread inflammation, restrict blood flow, and mutate DNA, substantially increasing the risk of cancers, cardiovascular disease, and chronic respiratory illnesses.\n\nIt is the primary cause of Chronic Obstructive Pulmonary Disease (COPD), which includes emphysema and chronic bronchitis.</string>
    <string name="Sleep">Sleep</string>
    <string name="Fitness">Fitness</string>
    <string name="Nutrition">Nutrition</string>
    <string name="Sleep_tips">Sleep tips: 6 steps to better sleep</string>
    <string name="Mastering_Sleep">Mastering Sleep Hygiene: Your Path to Quality Sleep</string>
    <string name="Fall_asleep">Fall asleep faster and sleep better</string>
    <string name="Insomnia">20 Tips for Better Sleep When You Have Insomnia</string>
    <string name="Harvard_Sleep_Trick">The Harvard Sleep Trick</string>
    <string name="Mental_Health">Mental Health</string>
    <string name="Smoking_tab">Smoking</string>
    <string name="Alcohol">Alcohol</string>
    <string name="Caring_Mental_health">Caring your mental health</string>
    <string name="Tips">Tips for better mental health</string>
    <string name="Nine_Ways">9 Ways to Help You Stay Mentally Healthy</string>
    <string name="manage_stress">Manage Stress: Health and Wellbeing Tips</string>
    <string name="coping">Coping with Stress: Strategies for 2026</string>
    <string name="label_never">never</string>
    <string name="label_almost_never">almost\nnever</string>
    <string name="label_sometimes">some-\ntimes</string>
    <string name="label_almost_every_day">almost\nevery day</string>
    <string name="label_every_day">every\nday</string>
    <string name="label_poor">poor</string>
    <string name="label_fair">fair</string>
    <string name="label_good">good</string>
    <string name="label_very_good">very good</string>
    <string name="label_excellent">excellent</string>
    <string name="edit">Edit</string>
    <string name="language_toggle">EN / DE</string>
    <string name="adjust_slides_hint">Adjust the slides to simulate your life expectancy</string>
    <string name="activity_question">Choose your activity interval</string>
    <string name="Smoking_question">How often do you smoke?</string>
    <string name="drinking_question">How often do you drink?</string>
    <string name="occasionally">occasionally</string>
    <string name="M30_60">30 - 60 minutes a week</string>
    <string name="M61_120">61 - 120 minutes a week</string>
    <string name="M120">120+ minutes a week</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="C1_5">1-5 Cigarettes a day</string>
    <string name="C6_10">6-10 Cigarettes a day</string>
    <string name="C10">10+ Cigarettes a day</string>
    <string name="D1_5">1-5 Drinks a day</string>
    <string name="D6_10">6-10 Drinks a day</string>
    <string name="D10">10+ Drinks a day</string>
    <string name="fitness_training">Fitness Training: Elements of a Well-Rounded Routine</string>
    <string name="physical_activity">Physical Activity Recommendations for Adults</string>
    <string name="beginners_guide">Beginner\'s Guide to Developing an Exercise Routine</string>
    <string name="fitness_routine">8 Exercises to Add to Your 2026 Fitness Routine</string>
    <string name="strength_training">Strength Training: A Beginner\'s Guide to Getting Stronger</string>
    <string name="Healthy_Eating">Healthy Eating Plate</string>
    <string name="dietary">Dietary Guidelines for Americans</string>
    <string name="well_eating">8 Tips for Eating Well</string>
    <string name="processed_food">How to Cut Back on Ultra-Processed Foods</string>
    <string name="Nutrition_label">Understanding Nutrition Labels</string>
    <string name="welcome_to_health_twin">Welcome to Health Twin!</string>
    <string name="hint_username">username</string>
    <string name="hint_password">password</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="Attention">Attention !</string>
    <string name="Motivation_Smoking">Let\'s work on lowering your smoking frequency together, one step at a time</string>
    <string name="smoking_health_risks">Please check out bad sides of smoking</string>
    <string name="Motivation_Drinking">Reducing alcohol intake is a powerful way to protect your long-term health</string>
    <string name="drinking_health_risks">Learn more about alcohol\'s effects on the body</string>
    <string name="Motivation_Exercise">Physical activity is the key to vitality. Even small movements count!</string>
    <string name="exercise_health_risks">Read about the risks of an inactive lifestyle</string>
    <string name="url_smoking">https://my.clevelandclinic.org/health/articles/17488-smoking</string>
    <string name="url_drinking">https://www.niaaa.nih.gov/alcohols-effects-health/alcohols-effects-body</string>
    <string name="url_exercise">https://medlineplus.gov/healthrisksofinactivelifestyle.html</string>
    <string name="ok">OK</string>
    <string name="desc_back">Back</string>
    <string name="desc_home">Home</string>
    <string name="desc_simulation">Simulation</string>
    <string name="desc_info">Info</string>
    <string name="desc_profile">Profile</string>


    <string name="create_account">Create Account</string>
    <string name="update_account">Update Account</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_dob">Date of Birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="diverse">Diverse</string>
    <string name="hint_height">Height</string>
    <string name="hint_weight">Weight</string>
    <string name="btn_create">Create</string>


</resources>